app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-deploy
  namespace: ecom-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecom
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: ecom
    spec:
      containers:
        - name: ecom-cont
          image: nimeshsv814/ecommerce-app:v1.1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ecom-deploy
  namespace: ecom-ns
spec:
  selector:
    app: ecom
  ports:
    - port: 8080
      targetPort: 8080
  type: NodePort
