httpRoutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproutes
  namespace: ecom-ns
spec:
  parentRefs:
    - name: kgateway
  rules:
    - matches:
        path: 
          type: PathPrefix
          value: /
      filters:
        - type: urlRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ecom-deploy
          port: 8080
